--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2299,7 +2299,7 @@
 
 			ul.actions > li {
 				display: inline-block;
-				padding: 0 1em 0 0;
+				padding: 0 1em 1em 0;
 				vertical-align: middle;
 			}
 
@@ -3140,7 +3140,9 @@
 
 			.wrapper.style2 input[type="text"],
 			.wrapper.style2 input[type="password"],
-			.wrapper.style2 input[type="email"],
+            .wrapper.style2 input[type="email"],
+            .wrapper.style2 input[type="number"],
+            .wrapper.style2 input[type="file"],
 			.wrapper.style2 select,
 			.wrapper.style2 textarea {
 				background-color: rgba(255, 255, 255, 0.05);
